<resources>
    <string name="app_name">Edges</string>

    <string name="back">Zurück</string>
    <string name="cancel">Abbrechen</string>
    <string name="ok">OK</string>
    <string name="start">Start</string>
    <string name="icon_forward">\u00BB</string>
    <string name="icon_back">\u00AB</string>

    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="password">Passwort</string>
    <string name="confirm_password">Passwort wiederholen</string>
    <string name="new_account">Neues Konto</string>
    <string name="create_account">Konto erstellen</string>
    <string name="login_title">Bitte anmelden</string>
    <string name="logout">Abmelden</string>
    <string name="enter">Onlinespiel beitreten</string>
    <string name="host">Onlinespiel erstellen</string>

    <string name="player_1">Spieler 1</string>
    <string name="player_2">Spieler 2</string>
    <string name="ki_name">KI</string>
    <string name="ki">Einzelspieler</string>

    <string name="again">Neues Spiel</string>
    <string name="paused">Spiel pausiert</string>
    <string name="cancel_game">Spiel abbrechen</string>

    <string name="wait_for_player">Warten auf Mitspieler...</string>
    <string name="wait_for_move">Warten auf Zug des Mitspielers...</string>

    <string name="winner">Der Spieler %s hat gewonnen :)</string>
    <string name="tie">Unentschieden</string>
    <string name="score">Score:</string>
    <string name="sum">Gesamt:</string>
    <string name="highscore">Highscore:</string>
    <string name="won">Gewonnen:</string>

    <string name="error_no_name">Bitte gebe deinen Namen ein.</string>
    <string name="error_no_password">Bitte gebe dein Passwort ein.</string>
    <string name="error_no_confirm">Bitte wiederhole dein Passwort.</string>
    <string name="error_false_credentials">Deine Angaben stimmen leider nicht überein.</string>
    <string name="error_passwords_no_match">Die Passwörter stimmen nicht überein.</string>
    <string name="error_name_exists">Der Name exitiert leider schon.</string>
    <string name="error_account_logged_in">Dieses Konto ist schon angemeldet.</string>

    <string name="title_activity_new_account">NewAccountActivity</string>
    <string name="title_activity_game">GameActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>


    <!--Levels, no tabs!-->
    <string name="choose_level">Level Auswahl</string>
    <array name="levels">
        <item>NNNNNNNNN\nNNNBEBNNN\nNNNENENNN\nNBEBEBNNN\nNENENENNN\nNBEBEBEBN\nNNNENENEN\nNNNBEBEBN\nNNNENENNN\nNNNBEBNNN\nNNNNNNNNN</item>
        <item>NNNNNNNNN\nNBEBEBEBN\nNENENENEN\nNBEBEBEBN\nNENENENEN\nNBEBEBEBN\nNENENENEN\nNBEBEBEBN\nNENENENEN\nNBEBEBEBN\nNNNNNNNNN</item>
        <item>NNNNNNNNN\nNBEBEBEBN\nNENNNNNEN\nNBNNNNNBN\nNENNNNNEN\nNBNNNBEBN\nNENNNENEN\nNBEBEBEBN\nNENENENNN\nNBEBEBNNN\nNNNNNNNNN</item>
        <item>NNNNNNN\nNBEBNNN\nNENENNN\nNBEBEBN\nNNNENEN\nNNNBEBN\nNNNNNNN</item>
    </array>

    <string name="title_activity_finished">FinishedActivity</string>
    <string name="title_activity_pause">PauseActivity</string>
    <string name="title_activity_btserver">BTServerActivity</string>
    <string name="title_activity_online_list">OnlineListActivity</string>
</resources>
