<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">
    <TextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="30sp"
        android:textColor="@color/blue"
        android:text="@string/player_1"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:id="@+id/linearLayout">
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/login_title"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ki"/>
        </LinearLayout>
        <TextView
            android:id="@+id/error"
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:textColor="@color/red"/>
        <EditText
            android:id="@+id/name"
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:hint="@string/name"/>
        <EditText
            android:id="@+id/password"
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password"/>
        <Button
            android:id="@+id/login"
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:text="@string/login"/>
        <TextView
            android:id="@+id/new_account"
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:textColor="@color/blue"
            android:text="@string/new_account"
            android:gravity="center"/>

    </LinearLayout>

</RelativeLayout>
