<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">
    <TextView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:textColor="@color/blue"
        android:text="@string/back"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:id="@+id/linearLayout">
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/new_account"/>
        <TextView
            android:id="@+id/error"
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:textColor="@color/red"/>
        <EditText
            android:id="@+id/name"
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:hint="@string/name"/>
        <EditText
            android:id="@+id/password"
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password"/>
        <EditText
            android:id="@+id/confirm_password"
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/confirm_password"/>
        <Button
            android:id="@+id/create_account"
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:text="@string/create_account"/>
    </LinearLayout>

</RelativeLayout>
