<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:padding="10sp">
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10sp"
        android:text="@string/choose_level"
        android:layout_centerHorizontal="true"/>
    <TextView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/preview"
        android:layout_alignBottom="@+id/preview"
        android:text="@string/icon_back"
        android:textSize="25sp"
        android:gravity="center"/>
    <TextView
        android:id="@+id/forward"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/preview"
        android:layout_alignBottom="@+id/preview"
        android:layout_alignParentRight="true"
        android:text="@string/icon_forward"
        android:textSize="25sp"
        android:gravity="center"/>
    <jk.edges.view.PlaygroundView
        android:id="@+id/preview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/back"
        android:layout_toLeftOf="@id/forward"
        android:layout_below="@+id/title"
        android:gravity="center"
        android:layout_centerHorizontal="true"/>
</RelativeLayout>